<resources>
    <string name="app_name">bdoInfo</string>
    <string name="password">Contraseña</string>
    <string name="username">Usuario</string>
    <string name="forgot_password_text">¿Olvidaste la contraseña?</string>
    <string name="register_text">Registrarse</string>
    <string name="login">Login</string>
    <string name="username_required_error">Usuario requerido</string>
    <string name="password_required_error">Contraseña requerida</string>
    <string name="username_incorrect">Credenciales incorrectas</string>
    <string name="password_incorrect">Credenciales incorrectas</string>
    <string name="registration_success">Registro realizado</string>
    <string name="invalid_email">Email no valido</string>
    <string name="email_required">Email requerido</string>
    <string name="email">Email</string>
    <string name="register">Registrarse</string>
    <string name="login_volver">Volver</string>
    <string name="email_required_error">Email requerido</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_mercado">Mercado</string>
    <string name="menu_perfil">Perfil</string>
    <string name="carne_input_hint">Carne</string>
    <string name="piel_input_hint">Piel</string>
    <string name="hoz_input_hint">Hierbas</string>
    <string name="sangre_input_hint">Sangre</string>
    <string name="tala_input_hint">Tala</string>
    <string name="recoleccion_section_header">Maestría en recolección</string>
    <string name="menu_salir">Salir</string>
    <string name="campo_vacio">No puedes dejar el campo vacío</string>
    <string name="maestria_fuera_rango">El valor tiene que ser entre 0 y 2000</string>
    <string name="guardar">Guardar</string>
    <string name="usuario_ya_existe">El usuario ya existe</string>
    <string name="email_ya_existe">El email ya existe</string>
</resources>