<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/outline_home_24"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_mercado"
            android:icon="@drawable/outline_storefront_24"
            android:title="@string/menu_mercado" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/baseline_person_outline_24"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/outline_exit_to_app_24"
            android:title="@string/menu_salir" />
    </group>
</menu>